# Image-Processing

./: .gitignore
App_OpenCV/: App_OpenCV.sln  CMakeLists.txt
App_OpenCV/App_OpenCV/: App_OpenCV.cpp  App_OpenCV.vcxproj  App_OpenCV.vcxproj.filters
